2009-05-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.29 "garbanzo" is released.

2008-12-27  Aidan Kehoe  <kehoea@parhasard.net>

	* make-docfile.c (main): Allow more than one -d argument, followed
	by a directory to change to.
	(put_filename): Don't strip directory information; with previous
	change, allows retrieval of Lisp function and variable origin
	files from #'built-in-symbol-file relative to lisp-directory. 
	(scan_lisp_file): Don't add an extraneous newline after the file
	name, put_filename has added the newline already. 

2008-05-21  Aidan Kehoe  <kehoea@parhasard.net>

	* make-mswin-unicode.pl:
	Check %WindowsSdkDir%, %MSSddk% for the Windows header files too. 

2008-05-14  Vin Shelton  <acs@xemacs.org>

	* winclient.c:  Create CONNECT_RETRIES and increase retry count
	from 5 to 10.

2008-05-13  Aidan Kehoe  <kehoea@parhasard.net>

	* make-docfile.c (scan_file):
	Pass READ_BINARY to scan_lisp_file, scan_c_file; avoids an
	assertion failure with Visual C++ 2005 Express Edition, and is
	logically more coherent, given that our Lisp and C files are saved
	with Unix line endings. 

2007-08-27  Mike Sperber  <mike@xemacs.org>

	* config.values.in (datarootdir):  Add.

2007-08-12  Mike Sperber  <mike@xemacs.org>

	* Makefile.in.in (datarootdir): Add.

2007-05-29  Stephen J. Turnbull  <stephen@xemacs.org>

	* etags.c: Sync to pot_etags_version 17.33.
	Reverts part of 2007-03-24 patch: no longer displays
	pot_etags_version in usage message.

2007-05-22  Jerry James  <james@xemacs.org>

	* ellcc.c (do_init_mode): Plug memory leak.

2007-05-21  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.28 "fuki" is released.

2007-03-24  Stephen J. Turnbull  <stephen@xemacs.org>

	* etags.c (print_version): More precise version info.  Suggested
	by Steve Youngs.
	(print_help): Use #ifdef; PRINT_UNDOCUMENTED_OPTIONS_HELP may be
	undefined.

2007-03-24  Stephen J. Turnbull  <stephen@xemacs.org>

	* etags.c: Sync to pot_etags_version 17.26.
