@@ -1,3 +1,7 @@
+2009-07-28  Stephen Turnbull  <stephen@xemacs.org>
+
+	* make-docfile.c (write_c_args): Parse UNUSED and USED_IF right.
+
 2009-05-18  Stephen J. Turnbull  <stephen@xemacs.org>
 
 	* XEmacs 21.5.29 "garbanzo" is released.
